--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "app/index.js",
   "scripts": {
-    "pug": "./node_modules/.bin/pug --hierarchy -o app/dst/ src/",
-    "scss": "./node_modules/node-sass/bin/node-sass src/index.scss app/dst/index.css --output-style compressed",
-    "webpack": "./node_modules/.bin/webpack",
-    "build": "yarn run pug && yarn run scss && yarn run webpack",
-    "build:dev": "yarn run pug &&  yarn run scss && yarn run webpack -- -d",
+    "build:pug": "./node_modules/.bin/pug --hierarchy -o app/dst/ src/",
+    "build:scss": "./node_modules/node-sass/bin/node-sass src/index.scss app/dst/index.css --output-style compressed",
+    "build:js": "./node_modules/.bin/webpack",
+    "build": "npm-run-all build:*",
+    "watch:pug": "npm run build:pug -- -w",
+    "watch:scss": "npm run build:scss -- -w",
+    "watch:js": "npm run build:js -- -w",
+    "watch": "npm-run-all --parallel watch:*",
     "start": "electron ."
   },
   "keywords": [],
@@ -21,6 +24,7 @@
     "babel-preset-react": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
     "node-sass": "^4.4.0",
+    "npm-run-all": "^4.0.1",
     "pug-cli": "^1.0.0-alpha6",
     "webpack": "^1.14.0"
   },
