--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "app/index.js",
   "scripts": {
     "build:pug": "./node_modules/.bin/pug --hierarchy -o app/dst/ src/",
-    "build:scss": "./node_modules/node-sass/bin/node-sass src/index.scss app/dst/index.css --output-style compressed",
     "build:js": "./node_modules/.bin/webpack --config webpack.config.babel.js",
     "build": "npm-run-all build:*",
     "watch:pug": "npm run build:pug -- -w",
-    "watch:scss": "npm run build:scss -- -w",
     "watch:js": "npm run build:js -- -w",
     "watch": "npm-run-all --parallel watch:*",
     "start": "electron .",
@@ -19,20 +17,29 @@
   "author": "Hiroki Usuba <hrky0206@gmail.com> (http://mimorisuzuko.github.io/)",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "autoprefixer": "^7.1.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-react-css-modules": "^3.3.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "butternut-webpack-plugin": "^0.1.0",
-    "clean-webpack-plugin": "^0.1.16",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
     "node-sass": "^4.5.3",
-    "npm-run-all": "^4.0.2",
+    "npm-run-all": "^4.1.1",
+    "postcss-loader": "^2.0.6",
+    "postcss-scss": "^1.0.2",
     "pug-cli": "^1.0.0-alpha6",
-    "webpack": "^3.3.0"
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.6.0"
   },
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "autobind-decorator": "^2.1.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "babel": {
     "plugins": [
