--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:js": "./node_modules/.bin/webpack --config webpack.config.babel.js",
     "build": "npm-run-all build:*",
     "watch:pug": "npm run build:pug -- -w",
-    "watch:js": "npm run build:js -- -w",
+    "watch:js": "WATCH=true ./node_modules/.bin/webpack-dev-server --config webpack.config.babel.js",
     "watch": "npm-run-all --parallel watch:*",
     "start": "electron .",
     "postinstall": "./rebuild.sh"
@@ -23,8 +23,8 @@
     "babel-plugin-react-css-modules": "^3.3.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "butternut-webpack-plugin": "^0.1.0",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "node-sass": "^4.5.3",
@@ -32,9 +32,11 @@
     "postcss-loader": "^2.0.6",
     "postcss-scss": "^1.0.2",
     "pug-cli": "^1.0.0-alpha6",
+    "react-hot-loader": "^3.0.0-beta.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
     "autobind-decorator": "^2.1.0",
