--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^2.9.1",
     "autobind-decorator": "^2.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
+  },
+  "dependencies": {
   },
   "babel": {
     "plugins": [
