--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Hiroki Usuba <hrky0206@gmail.com> (http://mimorisuzuko.github.io/)",
   "license": "MIT",
   "devDependencies": {
+    "autobind-decorator": "^2.1.0",
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -32,17 +33,15 @@
     "postcss-loader": "^2.0.6",
     "postcss-scss": "^1.0.2",
     "pug-cli": "^1.0.0-alpha6",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "autobind-decorator": "^2.1.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "webpack-dev-server": "^2.9.1"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "babel": {
     "plugins": [
       "transform-es2015-modules-commonjs"
