--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "app/index.js",
   "scripts": {
     "build:pug": "./node_modules/.bin/pug --hierarchy -o app/dst/ src/",
-    "build:js": "./node_modules/.bin/webpack --config webpack.config.babel.js",
+    "build:js": "./node_modules/.bin/webpack --mode production",
     "build": "npm-run-all build:*",
     "watch:pug": "npm run build:pug -- -w",
-    "watch:js": "WATCH=true ./node_modules/.bin/webpack-dev-server --config webpack.config.babel.js",
+    "watch:js": "./node_modules/.bin/webpack-dev-server --mode development",
+    "watch:start": "NODE_ENV=development yarn start",
     "watch": "npm-run-all --parallel watch:*",
     "start": "electron .",
     "postinstall": "npm rebuild"
@@ -17,38 +18,33 @@
   "author": "Hiroki Usuba <hrky0206@gmail.com> (http://mimorisuzuko.github.io/)",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.42",
     "autobind-decorator": "^2.1.0",
-    "autoprefixer": "^7.1.4",
+    "autoprefixer": "^8.1.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-react-css-modules": "^3.3.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-react-css-modules": "^3.3.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "electron-devtools-installer": "^2.2.1",
-    "node-sass": "^4.5.3",
-    "npm-run-all": "^4.1.1",
-    "postcss-loader": "^2.0.6",
-    "postcss-scss": "^1.0.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "electron-devtools-installer": "^2.2.3",
+    "node-sass": "^4.7.2",
+    "npm-run-all": "^4.1.2",
+    "postcss-loader": "^2.1.2",
+    "postcss-scss": "^1.0.4",
     "pug-cli": "^1.0.0-alpha6",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   },
-  "dependencies": {},
-  "babel": {
-    "plugins": [
-      "transform-es2015-modules-commonjs"
-    ]
-  }
+  "dependencies": {}
 }
