--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
 	"parser": "babel-eslint",
 	"env": {
 		"node": true,
-		"browser": true
+		"browser": true,
+		"es6": true
 	},
 	"globals": {},
 	"rules": {
