--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
 	"tabWidth": 4,
 	"singleQuote": true,
 	"useTabs": false,
-	"arrowParens": "always"
+	"arrowParens": "always",
+	"jsxSingleQuote": true
 }
