--- a/package.json
+++ b/package.json
@@ -11,36 +11,33 @@
     "watch:js": "./node_modules/.bin/webpack-dev-server --mode development",
     "watch:start": "NODE_ENV=development yarn start",
     "watch": "npm-run-all --parallel watch:*",
-    "start": "electron .",
-    "postinstall": "npm rebuild"
+    "start": "electron ."
   },
   "keywords": [],
   "author": "Hiroki Usuba <hrky0206@gmail.com> (http://mimorisuzuko.github.io/)",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@types/electron": "^1.6.10",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.18.2",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@emotion/css": "^11.9.0",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^3.0.0",
-    "electron": "9.1.0",
-    "electron-devtools-installer": "^2.2.4",
-    "emotion": "^10.0.17",
-    "eslint": "^6.5.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
+    "core-js": "^3.22.8",
+    "electron": "^19.0.4",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.30.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
+    "prettier": "^2.6.2",
     "pug-cli": "^1.0.0-alpha6",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-hot-loader": "^4.12.15",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-hot-loader": "^4.13.0",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {}
 }
